--- a/sass/info.scss
+++ b/sass/info.scss
@@ -275,6 +275,12 @@ p {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    img {
+      cursor: pointer;
+    }
+    img:hover {
+      transform: scale(1.1);
+    }
   }
   .product-left {
     max-width: 620px;
@@ -334,8 +340,102 @@ p {
         bottom: 0;
       }
     }
+    .c-2:after {
+      content: ' ';
+      width: 162px;
+      height: 162px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      margin-left: -81px;
+      margin-top: -81px;
+      background: url('../image/index/clv.png') 0 0 no-repeat;
+      z-index: 8;
+    }
     .c-2 {
       margin: 0 16px;
+      width: 784px;
+      height: 440px;
+      position: relative;
+      background: url('../image/index/circle.jpg') center center no-repeat;
+      div {
+        position: absolute;
+        background: url('..') 0 0 no-repeat;
+      }
+      div:after {
+        content: ' ';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        visibility: hidden;
+        cursor: pointer;
+      }
+      div.hover:after {
+        visibility: visible;
+        z-index: 5;
+      }
+      .item-1 {
+        width: 418px;
+        height: 243px;
+        background-image: url('../image/index/intro-1.png');
+        top: 30px;
+        left: 0;
+      }
+      .item-2 {
+        width: 342px;
+        height: 142px;
+        background-image: url('../image/index/intro-2.png');
+        top: 161px;
+        left: 0;
+      }
+      .item-3 {
+        width: 418px;
+        height: 243px;
+        background-image: url('../image/index/intro-3.png');
+        bottom: 31px;
+        left: 0;
+      }
+      .item-4 {
+        width: 419px;
+        height: 244px;
+        background-image: url('../image/index/intro-4.png');
+        top: 0;
+        right: 0;
+      }
+      .item-5 {
+        width: 387px;
+        height: 135px;
+        background-image: url('../image/index/intro-5.png');
+        top: 119px;
+        right: 0;
+      }
+      .item-6 {
+        width: 420px;
+        height: 243px;
+        background-image: url('../image/index/intro-6.png');
+        bottom: 0;
+        right: 0;
+      }
+      .item-1:after {
+        background-image: url('../image/index/intro-h1.png');
+      }
+      .item-2:after {
+        background-image: url('../image/index/intro-h2.png');
+      }
+      .item-3:after {
+        background-image: url('../image/index/intro-h3.png');
+      }
+      .item-4:after {
+        background-image: url('../image/index/intro-h4.png');
+      }
+      .item-5:after {
+        background-image: url('../image/index/intro-h5.png');
+      }
+      .item-6:after {
+        background-image: url('../image/index/intro-h6.png');
+      }
     }
     .c-3 {
       width: 270px;
