--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -32,13 +32,22 @@ body {
   font-size: 17px;
   line-height: 24px;
   background-color: #e5e5e5;
+  position: relative;
+  img.cursor {
+    position:absolute;
+    top: 0;
+    left: 50%;
+    margin-left: -505px;
+    z-index: 1;
+    max-width: inherit;
+  }
 }
-body.home, body.team {
-  background: #e5e5e5 url('../image/background/background-home.svg') center top no-repeat;
+body.features img.cursor {
+  margin-left: -380px;
 }
-body.features {
-  background: #e5e5e5 url('../image/background/background-home.svg') center top no-repeat;
-  background-size: 760px 760px;
+.cursorNormal {
+  position: absolute;
+  z-index: 2;
 }
 
 h1, h2, h3 {
@@ -68,7 +77,7 @@ a {
   text-decoration: none;
 }
 a:hover {
-  opacity: 0.8;
+  opacity: 0.6;
 }
 
 .button {
@@ -85,7 +94,8 @@ a:hover {
   background: url('../image/icon/download.svg') 24px center no-repeat;
 }
 .button:hover {
-  opacity: 0.8;
+  opacity: 0.6;
+  border-color: rgba(0, 0, 0, 0.6);
 }
 
 .h1 {
@@ -106,6 +116,8 @@ a:hover {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: relative;
+  z-index: 5;
 }
 
 .nav {
@@ -126,6 +138,87 @@ a:hover {
     border-bottom-color: $color-text;
   }
 }
+.side-bar {
+  width: 32px;
+  height: 16px;
+  background: url('../image/menu/menu.svg') 0 0 no-repeat;
+  cursor: pointer;
+  display: none;
+}
+.side-screen {
+  position: fixed;
+  z-index: 12;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #e5e5e5 url('../image/background/background.svg') center -100px no-repeat;
+  background-size: 1000px;
+  display: none;
+  .top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 72px;
+    padding: 0 24px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  }
+  .logo-text {
+    background: url('../image/clover/logo-text.svg') 0 0 no-repeat;
+    width: 133px;
+    height: 40px;
+  }
+  .close {
+    background: url('../image/menu/close.svg') 0 0 no-repeat;
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+  }
+  .side-nav {
+    font-family: Circular-Std;
+    padding-top: 120px;
+    font-size: 18px;
+    line-height: 24px;
+    text-transform: uppercase;
+    color: $color-text;
+    li {
+      margin-bottom: 64px;
+      width: 100%;
+      text-align: center;
+    }
+  }
+  .social {
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    li {
+      margin: 0 20px;
+    }
+  }
+  .copy {
+    font-size: 14px;
+    line-height: 18px;
+    text-align: center;
+    width:  100%;
+    position: fixed;
+    bottom: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
+    height: 70px;
+    line-height: 70px;
+    color: $color-text;
+    opacity: 0.4;
+  }
+}
+.social {
+  li {
+    opacity: 0.2;
+  }
+  li:hover {
+    opacity: 1;
+  }
+}
 
 .content {
   border: 1px solid rgba(0, 0, 0, 0.2);
@@ -136,9 +229,11 @@ a:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
+  z-index: 5;
 }
 
-.what {
+.section-what {
   padding-bottom: 200px;
   em {
     margin-top: 180px;
@@ -152,13 +247,23 @@ a:hover {
   }
 }
 
-.vision {
+.section-vision {
   padding-bottom: 160px;
   ul {
     margin-top: 60px;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     li {
+      width: 200px;
+      margin: 0 125px;
       background: url('') center 0 no-repeat;
+    }
+    li:hover {
+      transform: translateY(-60px);
+      transition-timing-function: linear;
+      transition-property: opacity, transform;
+      transition-duration: 0.2s;
     }
     li:nth-child(1n) {
       width: 180px;
@@ -167,8 +272,6 @@ a:hover {
       background-image: url('../image/vision/benefi.svg');
     }
     li:nth-child(2n) {
-      width: 200px;
-      margin: 0 250px;
       padding-top: 226px;
       background-image: url('../image/vision/app.svg');
     }
@@ -194,7 +297,7 @@ a:hover {
     justify-content: center;
   }
   dl.platform-item {
-    width: 500px;
+    max-width: 500px;
     padding: 140px 96px 0 96px;
     margin: 12px;
     dt {
@@ -215,6 +318,12 @@ a:hover {
     ul {
       font-size: 15px;
     }
+  }
+  dl:hover {
+    transform: translateY(-60px);
+    transition-timing-function: linear;
+    transition-property: opacity, transform;
+    transition-duration: 0.2s;
   }
   dl:nth-child(1), dl:nth-child(2) {
     ul {
@@ -250,11 +359,11 @@ a:hover {
     }
   }
   dl:nth-child(1), dl:nth-child(2) {
-    height: 545px;
+    min-height: 545px;
     margin-bottom: 18px;
   }
   dl:nth-child(3), dl:nth-child(4) {
-    height: 374px;
+    min-height: 374px;
   }
   dl:nth-child(1) {
     background: url('../image/icon/1.svg') center 60px no-repeat,
@@ -295,12 +404,18 @@ a:hover {
     flex-wrap: wrap;
     justify-content: center;
     dl {
-      width: 513px;
-      height: 317px;
+      max-width: 513px;
+      min-height: 317px;
       border: 1px solid rgba(0, 0, 0, 0.2);
       margin: 46px 12px 0 12px;
       padding-top: 105px;
       background: url('') center 50px no-repeat;
+    }
+    dl:hover {
+      transform: translateY(-60px);
+      transition-timing-function: linear;
+      transition-property: opacity, transform;
+      transition-duration: 0.2s;
     }
     dt {
       width: 250px;
@@ -340,7 +455,7 @@ a:hover {
   .clv-content {
     margin-top: 100px;
     width: 1040px;
-    height: 580px;
+    min-height: 580px;
     background: url('../image/clv/clv.svg') top center no-repeat;
     position: relative;
     font-size: 18px;
@@ -351,6 +466,12 @@ a:hover {
       text-align: center;
       position: absolute;
       margin-top: -0.5em;
+    }
+    li:hover {
+      transform: translateY(-20px);
+      transition-timing-function: linear;
+      transition-property: opacity, transform;
+      transition-duration: 0.1s;
     }
     li:nth-child(1) {
       width: 200px;
@@ -400,13 +521,18 @@ a:hover {
       flex: 0 0 auto;
       margin: 0 25px 38px 25px;
     }
+    li:hover {
+      transform: translateY(-40px);
+      transition-timing-function: linear;
+      transition-property: opacity, transform;
+      transition-duration: 0.1s;
+    }
     a {
-      display: block;
       width: 100%;
       height: 100%;
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
     }
   }
 }
@@ -436,7 +562,6 @@ a:hover {
     }
     .left-control.enable {
       background-image: url('../image/icon/left-dark.svg');
-      cursor: pointer;
     }
     .right-control {
       right: 0;
@@ -444,7 +569,9 @@ a:hover {
     }
     .right-control.enable {
       background-image: url('../image/icon/right-dark.svg');
-      cursor: pointer;
+    }
+    .enable:hover {
+      opacity: 0.6;
     }
   }
   .roadmap-item {
@@ -458,6 +585,12 @@ a:hover {
       margin-right: 24px;
       flex: 0 0 auto;
       padding-top: 32px;
+    }
+    dl:hover {
+      transform: translateY(-40px);
+      transition-timing-function: linear;
+      transition-property: opacity, transform;
+      transition-duration: 0.1s;
     }
     dt {
       width: 84px;
@@ -495,10 +628,10 @@ a:hover {
   }
   .co-item {
     border: 1px solid rgba(0, 0, 0, 0.2);
-    width: 500px;
-    height: 470px;
-    padding: 136px 80px 0 80px;
-    margin: 0 12px;
+    max-width: 500px;
+    min-height: 420px;
+    padding: 136px 80px 50px 80px;
+    margin: 0 12px 20px 12px;
     background: url() center 54px no-repeat;
   }
   .co-item:first-child {
@@ -570,8 +703,8 @@ a:hover {
     flex-wrap: wrap;
     justify-content: center;
     .ko-item {
-      width: 500px;
-      height: 400px;
+      max-width: 500px;
+      min-height: 400px;
       padding: 126px 90px 0 90px;
       margin: 12px;
     }
@@ -618,6 +751,10 @@ a:hover {
 .team-intro {
   padding-top: 150px;
   padding-bottom: 100px;
+  .team-intro-description {
+    display: flex;
+    flex-direction: column;
+  }
   em {
     max-width: 870px;
     margin-bottom: 50px;
@@ -626,6 +763,7 @@ a:hover {
     max-width: 700px;
     position: relative;
     padding-bottom: 170px;
+    margin: 0 auto;
   }
   h1:after {
     content: ' ';
@@ -644,7 +782,7 @@ a:hover {
     flex-wrap: wrap;
     justify-content: center;
     dl {
-      width: 600px;
+      max-width: 600px;
       margin: 12px;
       padding: 50px 50px 40px 50px;
     }
@@ -727,13 +865,15 @@ a:hover {
       font-family: Inter;
       text-align: left;
       padding-left: 40px;
-      display: block;
+      display: flex;
+      align-items: center;
       text-transform: uppercase;
       border: 1px solid rgba(0, 0, 0, 0.2);
       font-size: 20px;
-      line-height: 100px;
-      width: 608px;
-      height: 100px;
+      line-height: 24px;
+      width: 100%;
+      max-width: 608px;
+      min-height: 100px;
       margin: 0 12px 40px 12px;
       background: url('../image/icon/right-dark.svg') right 48px center no-repeat;
     }
@@ -764,6 +904,217 @@ a:hover {
     justify-content: center;
     li {
       margin: 0 16px;
+    }
+  }
+}
+
+@media only screen and (max-width: 1360px) {
+  .cursorNormal, .cursorHover {
+    display: none;
+  }
+  .head {
+    padding: 0 20px;
+    img {
+      max-width: 133px;
+      width: 133px;
+      height: 40px;
+    }
+  }
+  .container {
+    max-width: 100%;
+  }
+  .content {
+    border-width: 1px 0;
+    padding: 0 20px;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .clv {
+    .clv-content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-image: url('../image/clv/clv-small.svg');
+      background-position: bottom center;
+      padding-bottom: 200px;
+      li {
+        position: relative;
+        width: 250px !important;
+        padding-bottom: 56px;
+        margin-left: 0 !important;
+        top: 0 !important;
+        left: 0 !important;
+        bottom: auto !important;
+      }
+      li:after {
+        content: ' ';
+        width: 8px;
+        height: 8px;
+        border-radius: 50%;
+        background-color: $color-text;
+        position: absolute;
+        bottom: 24px;
+        left: 50%;
+        margin-left: -4px;
+      }
+      li:last-child:after {
+        display: none;
+      }
+    }
+  }
+  .section-roadmap {
+    .roadmap {
+      padding: 0;
+    }
+  }
+  .clover-os {
+    .co-row-item {
+      padding: 55px 0 65px 0;
+    }
+  }
+}
+
+@media only screen and (max-width: 980px) {
+  .side-bar {
+    display: block;
+  }
+  .nav {
+    display: none;
+  }
+  .head {
+    height: 72px;
+    padding: 0 24px;
+  }
+  .h1 {
+    font-size: 40px;
+    line-height: 52px;
+  }
+  h2 {
+    font-size: 15px;
+    line-height: 141%;
+  }
+  .section-what {
+    padding-bottom: 112px;
+    .h1 {
+      margin-top: 108px;
+    }
+    .button {
+      margin-top: 48px;
+    }
+  }
+  .section-vision {
+    padding-bottom: 64px;
+    ul {
+      flex-direction: column;
+      align-items: center;
+      margin-top: 0;
+      li {
+        margin-top: 48px !important;
+      }
+      li:nth-child(1) {
+        padding-top: 210px;
+      }
+      li:nth-child(2), li:nth-child(3) {
+        padding-top: 180px;
+      }
+    }
+  }
+  .platform {
+    padding-bottom: 40px  ;
+    h2 {
+      margin-top: 16px;
+    }
+    .platform-content {
+      margin-top: 42px;
+      dl.platform-item {
+        margin: 12px 0;
+        padding: 112px 22px 40px 22px;
+      }
+    }
+  }
+  .os-product {
+    padding-bottom: 40px;
+    .op-content {
+      margin-top: 32px;
+      dl {
+        margin: 0 0 20px 0;
+      }
+      dd {
+        padding: 0 20px;
+      }
+    }
+  }
+  .clv {
+    padding-bottom: 80px;
+    .clv-content {
+      margin-top: 56px;
+    }
+  }
+  .ecosystem {
+    padding-top: 0;
+    .ecosystem-content li {
+      width: 140px;
+      height: 70px;
+      margin: 12px;
+    }
+  }
+  .section-roadmap {
+    .control {
+      width: 100%;
+    }
+  }
+  .clover-os {
+    margin-top: 82px;
+    .co-content {
+      margin-top: 0;
+    }
+    h3 {
+      margin-bottom: 30px;
+    }
+    .co-item {
+      margin: 0 0 20px 0;
+    }
+  }
+  .kernel-container .ko-container .ko-item {
+    margin: 12px 0;
+  }
+  .team-intro {
+    padding-top: 110px;
+    .h1 {
+      margin-bottom: 35px;
+      padding-bottom: 100px;
+    }
+    .leadership dl {
+      margin: 12px 0;
+    }
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .cursor {
+    display: none;
+  }
+  body {
+    background: #e5e5e5 url('../image/background/background.svg') center -100px no-repeat;
+    background-size: 1000px;
+  }
+  .clover-os {
+    .co-row-item-content {
+      flex-direction: column;
+      dl {
+        width: 100%;
+      }
+    }
+    .co-row-item-content:after {
+      display: none;
+    }
+  }
+  .join .position {
+    width: 100%;
+    a {
+      padding: 20px 100px 20px 44px;
+      margin: 0 0 20px 0;
     }
   }
 }
