--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -388,7 +388,7 @@ a:hover {
     }
   }
   dl:nth-child(3) {
-    background: url('../image/icon/3.svg') center 60px no-repeat,
+    background: url('../image/icon/3-1.svg') center 60px no-repeat,
     linear-gradient(180deg, rgba(72, 251, 165, 0.5) 0%, rgba(72, 251, 165, 0) 100%);
   }
   dl:nth-child(4) {
