--- a/style/styles.css
+++ b/style/styles.css
@@ -381,7 +381,7 @@ a:hover {
   background-image: url("../image/logo/window.svg");
 }
 .platform dl:nth-child(3) {
-  background: url("../image/icon/3.svg") center 60px no-repeat, linear-gradient(180deg, rgba(72, 251, 165, 0.5) 0%, rgba(72, 251, 165, 0) 100%);
+  background: url("../image/icon/3-1.svg") center 60px no-repeat, linear-gradient(180deg, rgba(72, 251, 165, 0.5) 0%, rgba(72, 251, 165, 0) 100%);
 }
 .platform dl:nth-child(4) {
   background: url("../image/icon/4.svg") center 60px no-repeat, linear-gradient(180deg, rgba(32, 34, 37, 0.05) 0%, rgba(32, 34, 37, 0.01) 100%);
