--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -42,6 +42,10 @@ body {
     max-width: inherit;
   }
 }
+*::selection {
+  color: #48FBA5;
+  background-color: $color-text;
+}
 body.features img.cursor {
   margin-left: -380px;
 }
@@ -441,6 +445,7 @@ a:hover {
     dd {
       font-size: 16px;
       line-height: 24px;
+      padding: 0 20px;
     }
     dl:first-child {
       background-image: url('../image/icon/user.svg');
@@ -890,20 +895,25 @@ a:hover {
 
 .footer {
   font-family: Circular-Std-Book;
-  padding: 32px 0;
+  padding: 32px 0 11px 0;
   text-align: center;
+  position: relative;
+  z-index: 2;
   .copy {
     font-size: 14px;
     line-height: 18px;
     opacity: 0.4;
-    margin-bottom: 21px;
   }
   .social {
     display: flex;
     align-items: center;
     justify-content: center;
-    li {
-      margin: 0 16px;
+    li a{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 60px;
+      height: 62px;
     }
   }
 }
